#
# Copyright (c) 2024 NVIDIA CORPORATION & AFFILIATES, ALL RIGHTS RESERVED.
#
# This software product is a proprietary product of NVIDIA CORPORATION &
# AFFILIATES (the "Company") and all right, title, and interest in and to the
# software product, including all associated intellectual property rights, are
# and shall remain exclusively with the Company.
#
# This software product is governed by the End User License Agreement
# provided with the software product.
#

# DOCA Driver dependencies
app_driver_depends += ['dpdk']

# DOCA SDK dependencies
app_doca_depends += ['argp']
app_doca_depends += ['flow']
app_doca_depends += ['dpdk_bridge']
